[metadata]
name = edl-parser
description = Simple EDL reading library.
long_description = file: README
keywords = cg, production, edl, edit, decision, list, parser
license = MIT
license_files = LICENSE
author = Simon Hargreaves,
author_email= simon@simon-hargreaves.com,
url = http://www.simon-hargreaves.com/python-edl
maintainer=CG Wire,
maintainer_email=evan@cg-wire.com,
classifiers =
    Development Status :: 3 - Alpha,
    Environment :: Console,
    Intended Audience :: Developers,
    License :: OSI Approved :: MIT License,
    Operating System :: MacOS :: MacOS X,
    Operating System :: Microsoft :: Windows,
    Operating System :: POSIX,
    Programming Language :: Python,
    Natural Language :: English,
    Topic :: Multimedia :: Video,
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Multimedia :: Graphics

[options]
zip_safe = False
packages = find:
install_requires =
    timecode >= 1.3.1

[options.packages.find]
include = edl*

[options.extras_require]
dev =
    wheel

test =
    pytest
    pytest-cov

lint =
    black==23.3.0
    pre-commit==3.2.2
